--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/codemirror": "^5.60.15",
+    "@types/react-codemirror": "^1.0.11",
+    "@types/uuid": "^10.0.0",
+    "codemirror": "^5.0.0",
     "react": "^18.3.1",
+    "react-avatar": "^5.0.3",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.26.1",
