--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@types/react-codemirror": "^1.0.11",
     "@types/uuid": "^10.0.0",
     "codemirror": "^5.0.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "react": "^18.3.1",
     "react-avatar": "^5.0.3",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.26.1",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
