--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev:front": "vite",
+    "dev": "yarn build && yarn server:prod",
+    "start": "yarn build && yarn server:prod",
     "build": "tsc -b && vite build",
     "server:dev": "nodemon server.js",
     "server:prod": "node server.js",
