--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev:front": "vite",
-    "dev": "yarn build && yarn server:prod",
-    "start": "yarn build && yarn server:prod",
+    "dev": "npm run build && npm run server:prod",
+    "start": "npm run build && npm run server:prod",
     "build": "tsc -b && vite build",
     "server:dev": "nodemon server.js",
     "server:prod": "node server.js",
