--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,13 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev:front": "vite",
-    "dev": "npm run build && npm run server:prod",
-    "start": "npm run build && npm run server:prod",
+    "dev": "vite",
     "build": "tsc -b && vite build",
-    "server:dev": "nodemon server.js",
-    "server:prod": "node server.js",
-    "lint": "eslint .",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
